# semasia

./: Cargo.toml  README.md  à
addition/: main.rs
crates/auto-productions/: Cargo.toml
crates/auto-productions-parser/: Cargo.toml
crates/auto-productions-parser/src/: lib.rs
crates/auto-productions/src/: lib.rs
crates/dyn-grammar/: Cargo.toml
crates/dyn-grammar/src/: conflicts.rs  enriched_grammar.rs  grammar.rs  grammar_fmt.rs  lib.rs  symbolic_grammar.rs
crates/dyn-grammar/src/enriched_grammar/: mod.rs  non_terminal.rs  production.rs  token.rs
crates/dyn-grammar/src/lalr/: mod.rs
crates/dyn-grammar/src/parsing/: mod.rs  tables.rs
crates/dyn_grammar/: Cargo.toml
crates/dyn_grammar/src/: lib.rs  symbolic_grammar.rs
crates/dyn_grammar/src/enriched_grammar/: enriched_symbol.rs  mod.rs  production.rs  token.rs
crates/dyn_grammar/src/grammar/: mod.rs  non_terminal.rs  production.rs  symbol.rs  token.rs
crates/dyn_grammar/src/lalr/: automaton.rs  equation.rs  item.rs  mod.rs
crates/dyn_grammar/src/parsing/: action.rs  tables.rs
crates/dyn_grammar/src/slr/: automaton.rs  item.rs  mod.rs
crates/dyn_grammar/src/symbolic_grammar/: mod.rs
crates/ebnf-parser/: Cargo.toml
crates/ebnf-parser/src/: lib.rs
crates/ebnf-proc-macro/: Cargo.toml
crates/ebnf-proc-macro/src/: lib.rs
crates/ebnf_parser/: Cargo.toml
crates/ebnf_parser/src/: lib.rs
crates/ebnf_proc_macro/: Cargo.toml
crates/ebnf_proc_macro/src/: lib.rs
crates/from-inherited/: Cargo.toml
crates/from_inherited/src/: lib.rs
crates/grammar/: Cargo.toml
crates/grammar/src/: constructor.rs  grammar_extraction.rs  item_injections.rs  lib.rs
crates/inherited/: Cargo.toml
crates/inherited/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: actions.rs  dummy.rs  lib.rs  results.rs  traits.rs
crates/pipe/: Cargo.toml
crates/pipe/src/: lib.rs
crates/production/src/: lib.rs
crates/semasia-auto-productions/: Cargo.toml
crates/semasia-auto-productions-parser/: Cargo.toml
crates/semasia-auto-productions-parser/src/: lib.rs
crates/semasia-auto-productions/src/: lib.rs
crates/semasia-dyn-grammar/: Cargo.toml
crates/semasia-dyn-grammar/src/: conflicts.rs  grammar_fmt.rs  grammar_to_tokens.rs  lib.rs  symbolic_grammar.rs
crates/semasia-dyn-grammar/src/parsing/: tables.rs
crates/semasia-ebnf-parser/: Cargo.toml
crates/semasia-ebnf-parser/src/: lib.rs
crates/semasia-ebnf-proc-macro/: Cargo.toml
crates/semasia-ebnf-proc-macro/src/: lib.rs
crates/semasia-from-inherited/: Cargo.toml
crates/semasia-grammar/: Cargo.toml
crates/semasia-grammar/src/: constructor.rs  grammar_extraction.rs  item_injections.rs  lib.rs
crates/semasia-parser/: Cargo.toml
crates/semasia-parser/src/: actions.rs  dummy.rs  results.rs
crates/semasia-production/: Cargo.toml
crates/semasia-production/src/: lib.rs
examples/addition/: main.rs
examples/advanced/c-parser/: main.rs
examples/advanced/c-parser/grammar/: ast.rs  ctx.rs  mod.rs  types.rs
examples/advanced/calculus/: functions.rs  main.rs
examples/advanced/chess/: board.rs  chess_move.rs  grammar.rs  main.rs  piece.rs
examples/advanced/daw-lang/: display_tree.rs  main.c  main.rs
examples/advanced/daw-lang/grammar/: ast.rs  ctx.rs  expressions.rs  fmt.rs  mod.rs  tokens.rs  types.rs
examples/ambiguous/: main.rs
examples/ambiguous/expressions/: main.rs
examples/array_type/: main.rs
examples/ast/: main.rs
examples/basic/addition/: main.rs
examples/basic/addition-ast/: main.rs
examples/basic/arithmetic/: main.rs
examples/basic/arithmetic-ast/: main.rs
examples/basic/balanced/: main.rs
examples/basic/boolean/: main.rs
examples/ebnf/abcs/: main.rs
examples/ebnf/byte/: main.rs
examples/ebnf/laugh/: main.rs
examples/ebnf/scream/: main.rs
examples/ebnf/simple-addition/: main.rs
examples/ebnf/simplest-addition/: main.rs
examples/generics/addition/: main.rs
examples/inheritance/array-typing/: main.rs
examples/inheritance/correct-operator/: main.rs
examples/inheritance/three-address-code/: main.rs
examples/sat/: main.rs
examples/test/: main.rs
src/: lib.rs
