[package]
name = "static_sdd"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[dependencies]
grammar = { path = "crates/grammar" }
production = { path = "crates/production" }
inherited = { path = "crates/inherited" }

[[example]]
name = "addition"
path = "./examples/addition/main.rs"

[[example]]
name = "ast"
path = "./examples/ast/main.rs"

[[example]]
name = "balanced"
path = "./examples/balanced/main.rs"

[[example]]
name = "generic_addition"
path = "./examples/generic_addition/main.rs"

[[example]]
name = "sat"
path = "./examples/sat/main.rs"

[[example]]
name = "ambiguous"
path = "./examples/ambiguous/main.rs"

[[example]]
name = "array_type"
path = "./examples/array_type/main.rs"
