[package]
name = "semasia"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[dependencies]
grammar = { path = "crates/grammar" }
production = { path = "crates/production" }
from-inherited = { path = "crates/from-inherited" }
ebnf-proc-macro = { path = "crates/ebnf-proc-macro" }
parser = { path = "crates/parser" }
logos = "0.16.0"

[[example]]
name = "arithmetic-ast"
path = "./examples/basic/arithmetic-ast/main.rs"

[[example]]
name = "boolean"
path = "./examples/basic/boolean/main.rs"

[[example]]
name = "arithmetic"
path = "./examples/basic/arithmetic/main.rs"

[[example]]
name = "ambiguous-expressions"
path = "./examples/ambiguous/expressions/main.rs"

[[example]]
name = "array-typing"
path = "./examples/inheritance/array-typing/main.rs"

[[example]]
name = "correct-operator"
path = "./examples/inheritance/correct-operator/main.rs"

[[example]]
name = "three-address-code"
path = "./examples/inheritance/three-address-code/main.rs"

[[example]]
name = "scream"
path = "./examples/ebnf/scream/main.rs"

[[example]]
name = "abcs"
path = "./examples/ebnf/abcs/main.rs"

[[example]]
name = "simple-addition"
path = "./examples/ebnf/simple-addition/main.rs"

[[example]]
name = "simplest-addition"
path = "./examples/ebnf/simplest-addition/main.rs"

[[example]]
name = "laugh"
path = "./examples/ebnf/laugh/main.rs"

# [[example]]
# name = "chess"
# path = "./examples/advanced/chess/main.rs"

[[example]]
name = "calculus"
path = "./examples/advanced/calculus/main.rs"

[[example]]
name = "daw-lang"
path = "./examples/advanced/daw-lang/main.rs"

[[example]]
name = "test"
path = "./examples/test/main.rs"
