[package]
name = "semasia"
version = "0.1.5"
edition = "2024"
description = "a compile-time in-place parser generator in rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daw-dev/semasia"
keywords = ["generator", "grammar", "parser"]
categories = ["parsing"]
readme = "README.md"

[workspace]
resolver = "3"
members = ["crates/*"]

[dependencies]
semasia-grammar = { path = "crates/semasia-grammar", version = "0.1.1" }
semasia-production = { path = "crates/semasia-production", version = "0.1.0" }
semasia-from-inherited = { path = "crates/semasia-from-inherited", version = "0.1.0" }
semasia-ebnf-proc-macro = { path = "crates/semasia-ebnf-proc-macro", version = "0.1.0" }
semasia-auto-productions = { path = "crates/semasia-auto-productions", version = "0.1.0" }
semasia-parser = { path = "crates/semasia-parser", version = "0.1.0" }
logos = "0.16.0"

[dev-dependencies]
itertools = "0.14.0"
ptree = "0.5.2"

[[example]]
name = "arithmetic-ast"
path = "./examples/basic/arithmetic-ast/main.rs"

[[example]]
name = "boolean"
path = "./examples/basic/boolean/main.rs"

[[example]]
name = "arithmetic"
path = "./examples/basic/arithmetic/main.rs"

[[example]]
name = "ambiguous-expressions"
path = "./examples/ambiguous/expressions/main.rs"

[[example]]
name = "array-typing"
path = "./examples/inheritance/array-typing/main.rs"

[[example]]
name = "correct-operator"
path = "./examples/inheritance/correct-operator/main.rs"

[[example]]
name = "three-address-code"
path = "./examples/inheritance/three-address-code/main.rs"

[[example]]
name = "scream"
path = "./examples/ebnf/scream/main.rs"

[[example]]
name = "abcs"
path = "./examples/ebnf/abcs/main.rs"

[[example]]
name = "simple-addition"
path = "./examples/ebnf/simple-addition/main.rs"

[[example]]
name = "simplest-addition"
path = "./examples/ebnf/simplest-addition/main.rs"

[[example]]
name = "laugh"
path = "./examples/ebnf/laugh/main.rs"

[[example]]
name = "byte"
path = "./examples/ebnf/byte/main.rs"

# [[example]]
# name = "chess"
# path = "./examples/advanced/chess/main.rs"

[[example]]
name = "calculus"
path = "./examples/advanced/calculus/main.rs"

[[example]]
name = "c-parser"
path = "./examples/advanced/c-parser/main.rs"

[[example]]
name = "test"
path = "./examples/test/main.rs"
