[package]
name = "semasia-dyn-grammar"
version = "0.1.0"
edition = "2024"
description = "dynamic grammar backend for semasia"
license = "MIT or Apache-2.0"

[dependencies]
itertools = "0.14.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.110", features = ["full", "extra-traits"] }
