[package]
name = "semasia-ebnf-parser"
version = "0.1.0"
edition = "2024"
description = "parser of ebnf production for semasia"
license = "MIT or Apache-2.0"

[dependencies]
syn = "2.0.114"
semasia-dyn-grammar = { path = "../semasia-dyn-grammar", version = "0.1.0" }
itertools = "0.14.0"
proc-macro2 = "1.0.106"
proc-macro-error = "1.0.4"
quote = "1.0.45"
