[package]
name = "semasia-grammar"
version = "0.1.0"
edition = "2024"
description = "grammar attribute for semasia"
license = "MIT or Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full", "extra-traits"] }
itertools = "0.14.0"
semasia-dyn-grammar = {path = "../semasia-dyn-grammar"}
semasia-ebnf-parser = { path = "../semasia-ebnf-parser" }
semasia-auto-productions-parser = { path = "../semasia-auto-productions-parser/" }
